plugins {
    id "java"
    id "java-library-distribution"
    id "me.champeau.jmh" version "0.7.3"
    id "maven-publish"
}

group = 'com.epam.cme'
version = '2.1.5-MAHI21'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

jar {
    archiveBaseName.set('b2bits-jmdp3-mdp-with-mbo')
}

dependencies {
    implementation project(':core')
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.17.1'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.18.0'
    implementation group: 'net.openhft', name: 'koloboke-api-jdk8', version: '0.6.8'
    implementation group: 'net.openhft', name: 'chronicle-core', version: '2.27ea8'
    implementation group: 'org.agrona', name: 'agrona', version: '2.2.4'
    implementation group: 'net.openhft', name: 'koloboke-impl-jdk8', version: '0.6.8'
    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
    testImplementation group: 'uk.co.real-logic', name: 'sbe-tool', version: '1.6.0'
    testImplementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
}

distributions {
    main {
        distributionBaseName = 'b2bits-jmdp3'
        contents {
            from { '../dist' }
        }
    }
}

tasks.named('test', Test) {
    // For general JVM flags
    jvmArgs '--illegal-access=permit',
            '--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED',
            '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
            '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
            '--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED',
            '--add-opens=java.base/java.lang=ALL-UNNAMED',
            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
            '--add-opens=java.base/java.io=ALL-UNNAMED',
            '--add-opens=java.base/java.util=ALL-UNNAMED'
}

task sourcesJar(type: Jar, dependsOn: classes) {
    archiveClassifier.set('sources')
    from sourceSets.main.allSource
    archiveBaseName.set('b2bits-jmdp3-mdp-with-mbo')
}

artifacts {
    archives sourcesJar
}


task testJar(type: Jar) {
    archiveClassifier.set('tests')
    from sourceSets.test.output
    archiveBaseName.set('b2bits-jmdp3-mdp-with-mbo')
    manifest {
        attributes 'Main-Class': 'com.epam.cme.mdp3.test.MBOWithMBPMain'
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifactId = 'b2bits-jmdp3-mdp-with-mbo'
        }
    }
    repositories {
        maven {
            name = findProperty('nexusRepoId') ?: System.getenv('NEXUS_REPO_ID')
            url = findProperty('nexusRepoUrl') ?: System.getenv('NEXUS_REPO_URL')
            credentials {
                username = findProperty('nexusUsername') ?: System.getenv('NEXUS_USERNAME')
                password = findProperty('nexusPassword') ?: System.getenv('NEXUS_PASSWORD')
            }
        }
    }
}
